[project]
name = "forward-volatility-from-sofr-cap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
